# the_vault_password_manager

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: audit.py  auth.py  health.py  secrets.py
backend/app/core/: __init__.py  config.py  encryption.py  rate_limit.py  security.py
backend/app/db/: redis_client.py  session.py
backend/app/schemas/: audit.py  auth.py  secret.py
backend/app/services/: audit_service.py  auth_service.py  request_context.py  secrets_service.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: vault-workspace.module.css  vault-workspace.tsx
frontend/lib/: api.ts  types.ts
